--- a/planck.xcodeproj/xcshareddata/xcschemes/planck.xcscheme
+++ b/planck.xcodeproj/xcshareddata/xcschemes/planck.xcscheme
@@ -58,6 +58,20 @@
             ReferencedContainer = "container:planck.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "--out=$PROJECT_DIR/planck-cljs/out"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-s $PROJECT_DIR/planck-cljs/src"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "--plain-terminal"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
