Add simple script output of resulting binary location. Added some simple variables in order to be consistent across the command line call to build and output of the resulting location.

--- a/script/build
+++ b/script/build
@@ -6,5 +6,11 @@ script/build
 script/bundle
 cd ..
 
+
 # Xcode
-xcodebuild -project planck.xcodeproj -scheme planck -configuration Release SYMROOT=$(PWD)/build
+BUILD_DIR=build
+CONFIGURATION=Release
+
+xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(PWD)/$BUILD_DIR
+
+echo "Binary located at $(PWD)/$BUILD_DIR/$CONFIGURATION/planck"
