--- a/script/build
+++ b/script/build
@@ -1,9 +1,26 @@
 #!/bin/bash
 
+#----------------------------------------------------
+# Exit if the last command failed, indicating 
+# that there was a build failure
+#----------------------------------------------------
+checkCmdSuccess() {
+    CMD_RESULT=$?
+    if [ $CMD_RESULT != 0 ]; then
+        echo "Build Failed."
+        exit $CMD_RESULT 
+    fi
+}
+
+
 # ClojureScript
 cd planck-cljs
+echo "### Building ClojureScript"
 script/build
+checkCmdSuccess
+echo "### Bundling ClojureScript"
 script/bundle
+checkCmdSuccess
 cd ..
 
 
@@ -11,6 +28,8 @@ cd ..
 BUILD_DIR=build
 CONFIGURATION=Release
 
+echo "### Building Binary"
 xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(PWD)/$BUILD_DIR
+checkCmdSuccess
 
 echo "Binary located at $(PWD)/$BUILD_DIR/$CONFIGURATION/planck"
