--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -5,3 +5,7 @@ set -e
 set -o pipefail
 
 lein run -m clojure.main script/build.clj
+
+# Temporary workaround for #84
+touch src/planck/repl.cljs
+lein run -m clojure.main script/build.clj
