--dumb-terminal in Xcode scheme
For #77


Former-commit-id: db29585beac58e97a5d83b311f1f28b0febfc3e3

--- a/planck.xcodeproj/xcshareddata/xcschemes/planck.xcscheme
+++ b/planck.xcodeproj/xcshareddata/xcschemes/planck.xcscheme
@@ -68,7 +68,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "--plain-terminal"
+            argument = "--dumb-terminal"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
