--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,4 @@
 machine:
   pre:
-    - brew tap caskroom/cask
-    - brew install brew-cask
-    - brew tap caskroom/versions
-    - brew cask install java7
     - brew install leiningen
+    - brew install planck
