--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,8 @@
 machine:
   pre:
+    - brew tap caskroom/cask
+    - brew install brew-cask
+    - brew tap caskroom/versions
+    - brew cask install java7
     - brew install leiningen
     - brew install planck
