Update scheme to use -c for classpath

--- a/planck.xcodeproj/xcshareddata/xcschemes/planck.xcscheme
+++ b/planck.xcodeproj/xcshareddata/xcschemes/planck.xcscheme
@@ -64,7 +64,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-s $PROJECT_DIR/planck-cljs/src"
+            argument = "-c $PROJECT_DIR/planck-cljs/src"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
