--- a/script/build
+++ b/script/build
@@ -29,7 +29,11 @@ BUILD_DIR=build
 CONFIGURATION=Release
 
 echo "### Building Binary"
-xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(PWD)/$BUILD_DIR -derivedDataPath $BUILD_DIR/DerivedData
+if [ "$SANDBOX" = true ] ; then
+    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(PWD)/$BUILD_DIR -derivedDataPath $BUILD_DIR/DerivedData
+else
+    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(PWD)/$BUILD_DIR
+fi
 checkCmdSuccess
 
 echo "Binary located at $(PWD)/$BUILD_DIR/$CONFIGURATION/planck"
