Only apply patches to ClojureScript compiler
That way the ClojureScript version number
is preserved.

--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -14,7 +14,7 @@ if [ ! -e clojurescript ]; then
    pushd clojurescript
    git reset --hard $CLJS_GIT_SHA1
    # Apply patches
-   curl -L http://dev.clojure.org/jira/secure/attachment/15426/CLJS-1541.patch | git am
+   curl -L http://dev.clojure.org/jira/secure/attachment/15426/CLJS-1541.patch | git apply
    script/uberjar
    popd
 fi
