--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -8,13 +8,13 @@ set -o pipefail
 #lein run -m clojure.main script/build.clj
 
 # Build our own copy of ClojureScript compiler
-CLJS_GIT_SHA1=b98351ee286ede5261bd8e08762b25294dc27408
+CLJS_GIT_SHA1=cfa725745947a54c766af96f8b9790275aa6e6ef
 if [ ! -e clojurescript ]; then
    git clone https://github.com/clojure/clojurescript
    pushd clojurescript
    git reset --hard $CLJS_GIT_SHA1
    # Apply patches
-   #curl -L http://dev.clojure.org/jira/secure/attachment/15426/CLJS-1541.patch | git apply
+   curl -L http://dev.clojure.org/jira/secure/attachment/15491/CLJS-1579.patch | git apply
    script/uberjar
    popd
 fi
