--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -8,14 +8,13 @@ set -o pipefail
 #lein run -m clojure.main script/build.clj
 
 # Build our own copy of ClojureScript compiler
-CLJS_GIT_SHA1=cfa725745947a54c766af96f8b9790275aa6e6ef
+CLJS_GIT_SHA1=1e486d2599d60d6d0bdcecbe65a425531701a6c4
 if [ ! -e clojurescript ]; then
    git clone https://github.com/clojure/clojurescript
    pushd clojurescript
    git reset --hard $CLJS_GIT_SHA1
    # Apply patches
-   curl -L http://dev.clojure.org/jira/secure/attachment/15491/CLJS-1579.patch | git apply
-   curl -L http://dev.clojure.org/jira/secure/attachment/15492/CLJS-1580.patch | git apply
+   #curl -L http://dev.clojure.org/jira/secure/attachment/15491/CLJS-1579.patch | git apply
    script/uberjar
    popd
 fi
