--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -8,15 +8,13 @@ set -o pipefail
 #lein run -m clojure.main script/build.clj
 
 # Build our own copy of ClojureScript compiler
-CLJS_GIT_SHA1=2023353d635578a0666a50c3305bf92347185646
+CLJS_GIT_SHA1=7f7b647be0bc32de56772a9f5eb9d86998197287
 if [ ! -e clojurescript ]; then
    git clone https://github.com/clojure/clojurescript
    pushd clojurescript
    git reset --hard $CLJS_GIT_SHA1
    # Apply patches
-   curl -L http://dev.clojure.org/jira/secure/attachment/15505/CLJS-1564-2.patch | git am -3
-   curl -L http://dev.clojure.org/jira/secure/attachment/15507/CLJS-1577-2.patch | git am -3
-   curl -L http://dev.clojure.org/jira/secure/attachment/15508/CLJS-1585-2.patch | git am -3
+   # curl -L http://dev.clojure.org/jira/secure/attachment/15505/CLJS-1564-2.patch | git apply
    script/uberjar
    popd
 fi
