Fix cache logic errors
The code change for source maps,
causing the code to be evaluated
using js/PLANCK_EVAL, inadvertently
moved the execution prior to deps
loading (where the deps were loaded
based on the cache). This fix moves
the source back into the map, but
adds a :source-url key to the map so
that, when it comes time to evaluate
the JavaScript, it can be done with
js/PLANCK_EVAL.

--- a/site/script/build
+++ b/site/script/build
@@ -12,4 +12,4 @@ if [ ! -f $MARKDOWN_CLJ_JAR ]; then
     rm -rf script/cache/*
 fi
 
-planck -c $MARKDOWN_CLJ_JAR script/build.cljs
+planck -c $MARKDOWN_CLJ_JAR -k script/cache script/build.cljs
