--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -7,22 +7,6 @@ set -o pipefail
 # Previously was building using lein
 #lein run -m clojure.main script/build.clj
 
-# Build our own copy of tools.reader
-TRDR_GIT_COMMIT=tools.reader-1.0.0-alpha4
-if [ ! -e tools.reader ]; then
-   git clone https://github.com/clojure/tools.reader
-   pushd tools.reader
-   git reset --hard $TRDR_GIT_COMMIT
-   # Apply patches
-   # curl -L http://dev.clojure.org/jira/secure/attachment/15505/CLJS-1564-2.patch | git apply
-   # Deal with the case when building in sandbox mode
-   if [ -e ../profiles.clj ]; then
-       echo "{:dev {:local-repo \"../sandbox-m2\"}}" > profiles.clj
-   fi
-   lein install
-   popd
-fi
-
 # Build our own copy of ClojureScript compiler
 CLJS_GIT_COMMIT=f58dcdf4dc37ef52d4eb1e2b7c994282bf6351f5
 if [ ! -e clojurescript ]; then
@@ -32,6 +16,11 @@ if [ ! -e clojurescript ]; then
    # Apply patches
    curl -L http://planck-repl.org/releases/1.10/test-workarounds.patch | git apply
    curl -L http://dev.clojure.org/jira/secure/attachment/15518/CLJS-1592.patch | git apply
+   # Deal with the case when building in sandbox mode
+   if [ -e ../profiles.clj ]; then
+       export MAVEN_OPTS="-Dmaven.repo.local=../sandbox-m2"
+       echo "{:dev {:local-repo \"../sandbox-m2\"}}" > profiles.clj
+   fi
    script/uberjar
    popd
 fi
