--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -8,14 +8,13 @@ set -o pipefail
 #lein run -m clojure.main script/build.clj
 
 # Build our own copy of ClojureScript compiler
-CLJS_GIT_COMMIT=c31e91f89dab42d519e9051e630ac8011cafa8d7
+CLJS_GIT_COMMIT=4681e47418ead29156ca01d58eee700e11c1e096
 if [ ! -e clojurescript ]; then
    git clone https://github.com/clojure/clojurescript
    pushd clojurescript
    git reset --hard $CLJS_GIT_COMMIT
    # Apply patches
-   curl -L http://dev.clojure.org/jira/secure/attachment/15548/CLJS-1590v2.patch | git apply
-   curl -L http://dev.clojure.org/jira/secure/attachment/15518/CLJS-1592.patch | git apply
+   # curl -L http://dev.clojure.org/jira/secure/attachment/15518/CLJS-1592.patch | git apply
    # Deal with the case when building in sandbox mode
    if [ -e ../profiles.clj ]; then
        export MAVEN_OPTS="-Dmaven.repo.local=../sandbox-m2"
