--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -8,18 +8,19 @@ set -o pipefail
 #lein run -m clojure.main script/build.clj
 
 # Build our own copy of ClojureScript compiler
-CLJS_GIT_COMMIT=29eb8e014f60d57c974fef46f8609ca0be0fd247
+CLJS_GIT_COMMIT=28e040d41f3a83901b6391898f51c4bfc2622452
 if [ ! -e clojurescript ]; then
    git clone https://github.com/clojure/clojurescript
    pushd clojurescript
    git reset --hard $CLJS_GIT_COMMIT
    # Apply patches
-   curl -L http://dev.clojure.org/jira/secure/attachment/15609/CLJS-1612.patch | git apply
+   # curl -L http://dev.clojure.org/jira/secure/attachment/15609/CLJS-1612.patch | git apply
    # Deal with the case when building in sandbox mode
    if [ -e ../profiles.clj ]; then
        export MAVEN_OPTS="-Dmaven.repo.local=../sandbox-m2"
        echo "{:dev {:local-repo \"../sandbox-m2\"}}" > profiles.clj
    fi
+   script/bootstrap
    script/uberjar
    popd
 fi
