--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -26,4 +26,5 @@ set -o pipefail
 CLJSC_CP=`lein with-profile build classpath`
 
 mkdir -p out/cljs/analyzer
+mkdir -p out/cljs/spec/impl
 java -cp $CLJSC_CP clojure.main script/build.clj
