--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -4,26 +4,30 @@
 set -e
 set -o pipefail
 
-# Build our own copy of ClojureScript compiler
-#CLJS_GIT_COMMIT=f110ed3b0adcaad90912a3c89228cc882ffe2214
-#if [ ! -e clojurescript ]; then
-#   git clone https://github.com/clojure/clojurescript
-#   pushd clojurescript
-#   git reset --hard $CLJS_GIT_COMMIT
-#   # Apply patches
-#   # curl -L http://dev.clojure.org/jira/secure/attachment/15609/CLJS-1612.patch | git apply
-#   # Deal with the case when building in sandbox mode
-#   if [ -e ../profiles.clj ]; then
-#       export MAVEN_OPTS="-Dmaven.repo.local=../sandbox-m2"
-#       echo "{:dev {:local-repo \"../sandbox-m2\"}}" > profiles.clj
-#   fi
-#   script/bootstrap
-#   script/uberjar
-#   popd
-#fi
-#CLJSC_CP=`lein with-profile build classpath`:clojurescript/target/cljs.jar
+# Uncomment to build our own copy of ClojureScript compiler
+# Also see change needed in project.clj
+CLJS_GIT_COMMIT=81fb24e2adc96c53834486b706b975336a4a0d23
 
-CLJSC_CP=`lein with-profile build classpath`
+if [ -z "$CLJS_GIT_COMMIT" ]; then
+  CLJSC_CP=`lein with-profile build classpath`
+else	
+  if [ ! -e clojurescript ]; then
+     git clone https://github.com/clojure/clojurescript
+     pushd clojurescript
+     git reset --hard $CLJS_GIT_COMMIT
+     # Apply patches
+     # curl -L http://dev.clojure.org/jira/secure/attachment/15609/CLJS-1612.patch | git apply
+     # Deal with the case when building in sandbox mode
+     if [ -e ../profiles.clj ]; then
+         export MAVEN_OPTS="-Dmaven.repo.local=../sandbox-m2"
+         echo "{:dev {:local-repo \"../sandbox-m2\"}}" > profiles.clj
+     fi
+     script/bootstrap
+     script/uberjar
+     popd
+  fi
+  CLJSC_CP=`lein with-profile build classpath`:clojurescript/target/cljs.jar
+fi
 
 mkdir -p out/cljs/analyzer
 mkdir -p out/cljs/spec/impl
