Add support for finding libzip headers
Fixes #301

--- a/planck-c/Makefile
+++ b/planck-c/Makefile
@@ -12,7 +12,9 @@ ifeq ($(UNAME_S),Linux)
 	LIBFLAGS = $(shell pkg-config --libs $(DEPS))
 endif
 ifeq ($(UNAME_S),Darwin)
+	DEPS = libzip
 	LIBFLAGS += -lJavaScriptCore -lzip -lz
+	CFLAGS += $(shell pkg-config --cflags $(DEPS))
 endif
 CFLAGS += $(EXTRA_CFLAGS)
 
