Update Travis CI config file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-install: make lein maven javascriptcoregtk-3.0 libglib2.0-dev libzip-dev
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y lein maven javascriptcoregtk-3.0 libglib2.0-dev libzip-dev
 language: c
-script: cd planck-c && make bundle-and-build
 compiler: clang
+script: cd planck-c && make bundle-and-build
