--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y lein maven javascriptcoregtk-3.0 libglib2.0-dev libzip-dev
+  - sudo apt-get install -y leiningen maven javascriptcoregtk-3.0 libglib2.0-dev libzip-dev
 language: c
 compiler: clang
 script: cd planck-c && make bundle-and-build
