--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y maven javascriptcoregtk-3.0 libglib2.0-dev libzip-dev
-language: c
-compiler: clang
+language: clojure
 lein: lein2
+compiler: clang
 script: cd planck-c && make bundle-and-build
