--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -6,7 +6,7 @@ set -o pipefail
 
 # Uncomment to build our own copy of ClojureScript compiler
 # Also see change needed in project.clj
-CLJS_GIT_COMMIT=HEAD
+#CLJS_GIT_COMMIT=HEAD
 
 if [ -z "$CLJS_GIT_COMMIT" ]; then
   CLJSC_CP=`lein with-profile build classpath`
