Support building with javascriptcoregtk 4.0 or 3.0
Ubuntu 16.10 ships with 4.0 while 14.10 ships with 3.0.
Updates the Makefile to accomodate both, prefering 4.0.

--- a/planck-c/Makefile
+++ b/planck-c/Makefile
@@ -7,7 +7,8 @@ CC = clang
 CFLAGS = -Wall -DDEBUG
 UNAME_S = $(shell uname -s)
 ifeq ($(UNAME_S),Linux)
-	DEPS = javascriptcoregtk-3.0 libzip libcurl
+	JSCDEP = $(shell pkg-config --exists javascriptcoregtk-4.0 && echo "javascriptcoregtk-4.0" || echo "javascriptcoregtk-3.0")
+	DEPS = $(JSCDEP) libzip libcurl
 	CFLAGS += -pthread $(shell pkg-config --cflags $(DEPS))
 	LIBFLAGS = $(shell pkg-config --libs $(DEPS))
 endif
