--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y maven javascriptcoregtk-3.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev
-  - cd planck-cljs
+  - sudo apt-get install -y default-jdk javascriptcoregtk-3.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev
 dist: trusty
-language: clojure
-jdk: oraclejdk8
-script: cd ../planck-c && make bundle-and-build && ./planck -e '(map inc (range 3))'
+language: c
+script: cd planck-c && make bundle-and-build && ./planck -e '(map inc (range 3))'
