--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -4,12 +4,15 @@
 set -e
 set -o pipefail
 
+# Initialize lein if it hasn't yet been
+script/lein -v
+
 # Uncomment to build our own copy of ClojureScript compiler
 # Also see change needed in project.clj
 #CLJS_GIT_COMMIT=HEAD
 
 if [ -z "$CLJS_GIT_COMMIT" ]; then
-  CLJSC_CP=`lein with-profile build classpath`
+  CLJSC_CP=`script/lein with-profile build classpath`
 else	
   if [ ! -e clojurescript ]; then
      git clone https://github.com/clojure/clojurescript
@@ -26,7 +29,7 @@ else
      script/uberjar
      popd
   fi
-  CLJSC_CP=`lein with-profile build classpath`:clojurescript/target/cljs.jar
+  CLJSC_CP=`script/lein with-profile build classpath`:clojurescript/target/cljs.jar
 fi
 
 mkdir -p out/cljs/analyzer
