--- a/script/build
+++ b/script/build
@@ -44,15 +44,15 @@ OS_LION_RE='^10\.7\..*'
 
 echo "### Building 1st Stage Binary"
 if [[ $OS_VERSION =~ $OS_LION_RE ]] ; then
-    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(PWD)/$BUILD_DIR
+    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(pwd)/$BUILD_DIR
 else
-    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(PWD)/$BUILD_DIR -derivedDataPath $BUILD_DIR/DerivedData
+    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(pwd)/$BUILD_DIR -derivedDataPath $BUILD_DIR/DerivedData
 fi
 checkCmdSuccess
 
 echo "### Compiling Macro Namespaces"
 mkdir -p planck-cljs/out/macros-tmp
-$(PWD)/$BUILD_DIR/$CONFIGURATION/planck --quiet -sdk planck-cljs/out/macros-tmp <<REPL_INPUT
+$(pwd)/$BUILD_DIR/$CONFIGURATION/planck --quiet -sdk planck-cljs/out/macros-tmp <<REPL_INPUT
 (require-macros 
   'planck.repl
   'planck.core 
@@ -99,10 +99,10 @@ cd ..
 
 echo "### Building 2nd Stage Binary"
 if [[ $OS_VERSION =~ $OS_LION_RE ]] ; then
-    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(PWD)/$BUILD_DIR
+    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(pwd)/$BUILD_DIR
 else
-    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(PWD)/$BUILD_DIR -derivedDataPath $BUILD_DIR/DerivedData
+    xcodebuild -project planck.xcodeproj -scheme planck -configuration $CONFIGURATION SYMROOT=$(pwd)/$BUILD_DIR -derivedDataPath $BUILD_DIR/DerivedData
 fi
 checkCmdSuccess
 
-echo "Binary located at $(PWD)/$BUILD_DIR/$CONFIGURATION/planck"
+echo "Binary located at $(pwd)/$BUILD_DIR/$CONFIGURATION/planck"
