Replaced all shebang by more portable ones (`#!/bin/bash -> #!/usr/bin/env bash`)

--- a/script/build
+++ b/script/build
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 
 #----------------------------------------------------
 # Exit if the last command failed, indicating 
