--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -5,7 +5,7 @@ set -e
 set -o pipefail
 
 # Initialize lein if it hasn't yet been
-script/lein -v
+script/lein -v > /dev/null
 
 # Uncomment to build our own copy of ClojureScript compiler
 # Also see change needed in project.clj
