Add include directories for ICU

--- a/planck-c/CMakeLists.txt
+++ b/planck-c/CMakeLists.txt
@@ -101,6 +101,7 @@ if(APPLE)
 elseif(UNIX)
    pkg_check_modules(ICU_UC REQUIRED icu-uc)
    pkg_check_modules(ICU_IO REQUIRED icu-io)
+   include_directories(${ICU_UC_INCLUDE_DIRS} ${ICU_IO_INCLUDE_DIRS})
    target_link_libraries(planck ${ICU_UC_LDFLAGS} ${ICU_IO_LDFLAGS})
 endif(APPLE)
 
