--- a/planck-cljs/script/build
+++ b/planck-cljs/script/build
@@ -20,6 +20,7 @@ else
      git reset --hard $CLJS_GIT_COMMIT
      # Apply patches
      # curl -L https://github.com/mfikes/clojurescript/commit/5dfc2d9488cb235e6c0ddaa9d30d707ff513caac.patch | git apply
+     curl -L http://dev.clojure.org/jira/secure/attachment/16303/CLJS-1861.patch | git apply
      curl http://planck-repl.org/releases/1.18/0001-Experiment-turning-off-fn-var.patch | git apply
      # Deal with the case when building in sandbox mode
      if [ -e ../profiles.clj ]; then
