--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y default-jdk javascriptcoregtk-3.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev
+  - sudo apt-get install -y javascriptcoregtk-3.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev
+install:
+- jdk_switcher use openjdk8
 dist: trusty
 language: c
 script: script/build && script/test
