--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,18 @@
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y javascriptcoregtk-3.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev
-install:
-- jdk_switcher use openjdk8
-dist: trusty
 language: c
+
+os:
+  - linux
+  - osx
+
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install leiningen libzip icu4c; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get -qq update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y javascriptcoregtk-3.0 libglib2.0-dev libzip-dev libcurl4-gnutls-dev; fi
+
+install:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then jdk_switcher use openjdk8; fi
+
+dist: trusty
+
 script: script/build && script/test
